# course-design

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cpp.yml
include/data/: database.hpp  record.hpp
include/db/: database.hpp
include/tui/: edit.hpp  manageData.hpp  query.hpp  tabs.hpp
include/tui/component/: labeled_input.hpp
include/tui/option/: options.hpp
src/data/: calculate.cpp  database.cpp  operate.cpp  record.cpp
src/db/: calculate.cpp  database.cpp
src/include/: database.hpp  operate.hpp  options.hpp
src/include/tui/: homescreen.hpp  query.hpp  setting.hpp
src/tui/: edit.cpp  homescreen.cpp  main.cpp  mainTab.cpp  manageData.cpp  query.cpp  setting.cpp  table.cpp  tabs.cpp
src/tui/component/: labeled_input.cpp
src/tui/option/: options.cpp
